2008-06-28  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIOUtil.c:	Plug memory leak in latest commit.  Thanks
	Rolf Ade for detecting and Dan Steffen for the fix [Bug 2004654].

2008-06-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIOUtil.c: Fixed bug in Tcl_GetTranslatedPath() when
	operating on the "Special path" variant of the "path" Tcl_ObjType
	intrep.  A full normalization was getting done, in particular, coercing
	relative paths to absolute, contrary to what the function of
	producing the "translated path" is supposed to do.  [Bug 1972879].

2008-06-20  Don Porter  <dgp@users.sourceforge.net>

	* tests/binary.test:	Corrected flawed tests revealed by a -debug 1
	* tests/io.test:	-singleproc 1 test suite run.

2008-06-18  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclParseExpr.c:	Disabled attempts to support [expr]
	functions named eq(...) or ne(...).  Any attempts to use such
	functions were panicking.  [Bug 1971879].

2008-06-16  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCmdIL.c (InfoFrameCmd): Backport of fix made on the
	* tests/info.test: head branch :: Moved the code looking up the
	information for key 'proc' out of the TCL_LOCATION_BC branch to
	after the switch, this is common to all frame types. Updated the
	testsuite to match. This was exposed by the 2008-06-08 commit
	(Miguel), switching uplevel from direct eval to compilation. Fixes
	[Bug 1987851].

2008-06-12  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCmdIL.c (InfoFrameCmd): TIP #280 conditional
	  feature. Added checks to validate HashEntry and HashTable
	  information gotten from Command structures. This seems to be
	  needed to handle structures managed by Itcl.

2008-06-12  Daniel Steffen  <das@users.sourceforge.net>

	* unix/Makefile.in:		add complete deps on tclDTrace.h.

	* unix/Makefile.in:		clean generated tclDTrace.h file.
	* unix/configure.in (SunOS): 	fix static DTrace-enabled build.
